# PluginParameters

./: .gitignore  CMakeLists.txt  README.md
include/: BlobParameter.h  BooleanParameter.h  ConcurrentParameterSet.h  DataParameter.h  DecibelParameter.h  Event.h  EventDispatcher.h  FloatParameter.h  FrequencyParameter.h  IntegerParameter.h  Parameter.h  ParameterSet.h  PluginParameter.h  PluginParameterSet.h  PluginParameters.h  StringParameter.h  ThreadsafePluginParameterSet.h  VoidParameter.h
test/: CMakeLists.txt  MultithreadedTest.cpp  PluginParametersTest.cpp  TestRunner.h
